--- a/hadoop-base/Dockerfile
+++ b/hadoop-base/Dockerfile
@@ -9,6 +9,9 @@ ENV HADOOP_VERSION  2.7.7
 ENV HADOOP_URL ${PKG_URL:-http://download.cloudwiz.cn/package}/hadoop-$HADOOP_VERSION.tar.gz
 ENV JAVA_HOME ${INSTALL_ROOT}/jdk
 
+RUN apt-get -y update && apt-get install -y net-tools netcat perl \
+    && apt-get clean all \
+    && rm -rf /var/cache/ \
 
 RUN set -x \
     && curl -fSL "$HADOOP_URL" -o /tmp/hadoop.tar.gz \
