--- a/hadoop-base/Dockerfile
+++ b/hadoop-base/Dockerfile
@@ -17,6 +17,7 @@ RUN set -x \
     && curl -fSL "$HADOOP_URL" -o /tmp/hadoop.tar.gz \
     && mkdir -p ${INSTALL_ROOT} \
     && tar -xvf /tmp/hadoop.tar.gz -C ${INSTALL_ROOT} \
+    && rm -rf ${INSTALL_ROOT}/hadoop-$HADOOP_VERSION/share \
     && rm -rf /tmp/hadoop.tar.gz*
 
 RUN ln -s ${INSTALL_ROOT}/hadoop-$HADOOP_VERSION/etc/hadoop /etc/hadoop
