ip 地址绑定隔离

--- a/template/cmservice/conf/cmservice.properties
+++ b/template/cmservice/conf/cmservice.properties
@@ -1,4 +1,4 @@
-CMService.HttpHost = <:host_ip:>
+CMService.HttpHost = cmservice
 CMService.HttpPort = 9601
 
 CMService.GrafanaScheme = <:nginx_protocol:>
