--- a/template/log-pp/config/log.pp.properties
+++ b/template/log-pp/config/log.pp.properties
@@ -42,7 +42,7 @@ Opentsdb.connect.mysql_url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>
 Opentsdb.connect.mysql_username = <:mysql_username:>
 Opentsdb.connect.mysql_password = <:mysql_password:>
 
-Server.bind = 0.0.0.0
+Server.bind = log_pp
 Server.port = 5045
 Server.timeoutSeconds = 15
 
