--- a/template/opentsdb/conf/opentsdb.conf
+++ b/template/opentsdb/conf/opentsdb.conf
@@ -4,7 +4,7 @@
 tsd.network.port = 4242
 
 # The IPv4 network address to bind to, defaults to all addresses
-# tsd.network.bind = 0.0.0.0
+tsd.network.bind = opentsdb
 
 # Enables Nagel's algorithm to reduce the number of packets sent over the
 # network, default is True
