--- a/template/webfront/conf/defaults.ini
+++ b/template/webfront/conf/defaults.ini
@@ -26,7 +26,7 @@ plugins = <:install_root:>/webfront/public/plugins
 protocol = <:nginx_protocol:>
 
 # The ip address to bind to, empty will bind to all interfaces
-http_addr =
+http_addr = webfront
 
 # The http port  to use
 http_port = 3000
