--- a/hadoop.env
+++ b/hadoop.env
@@ -4,9 +4,13 @@ CORE_CONF_hadoop_proxyuser_hue_hosts=*
 CORE_CONF_hadoop_proxyuser_hue_groups=*
 CORE_CONF_io_compression_codecs=org.apache.hadoop.io.compress.SnappyCodec
 
-HDFS_CONF_dfs_webhdfs_enabled=true
+HDFS_CONF_dfs_webhdfs_enabled=false
 HDFS_CONF_dfs_permissions_enabled=false
 HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check=false
+HDFS_CONF_dfs_datanode_address=datanode:50010
+HDFS_CONF_dfs_datanode_http_address=datanode:50075
+HDFS_CONF_dfs_datanode_ipc_address=datanode:50020
+HDFS_CONF_dfs_namenode_http-address	=namenode:50070
 
 
 HBASE_CONF_hbase_rootdir=hdfs://namenode:9000/hbase
@@ -14,9 +18,11 @@ HBASE_CONF_hbase_cluster_distributed=true
 HBASE_CONF_hbase_zookeeper_quorum=zookeeper
 
 HBASE_CONF_hbase_master=hbase-master:16000
+HBASE_CONF_hbase_master_info_bindAddress=hbase-master
 HBASE_CONF_hbase_master_hostname=hbase-master
 HBASE_CONF_hbase_master_port=16000
 HBASE_CONF_hbase_master_info_port=16010
+HBASE_CONF_hbase_regionserver_info_bindAddress=hbase-regionserver
 HBASE_CONF_hbase_regionserver_port=16020
 HBASE_CONF_hbase_regionserver_info_port=16030
 
