--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -1,4 +1,4 @@
-FROM cloudwiz/hadoop-base:1.0.0
+FROM cloudwiz/hadoop-base-kerberos:2.7.7
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG INSTALL_ROOT
@@ -6,9 +6,7 @@ ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 HEALTHCHECK CMD curl -f http://localhost:50070/ || exit 1
 
-ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
-RUN mkdir -p /hadoop/dfs/name
-VOLUME /hadoop/dfs/name
+VOLUME /data/dfs/namenode
 
 ADD run.sh /run.sh
 RUN chmod a+x /run.sh
