--- a/hadoop.env
+++ b/hadoop.env
@@ -1,10 +1,11 @@
-fs_defaultFS=namenode:9000
+CORE_CONF_fs_defaultFS=hdfs://namenode:9000
 CORE_CONF_hadoop_http_staticuser_user=root
 CORE_CONF_hadoop_proxyuser_hue_hosts=*
 CORE_CONF_hadoop_proxyuser_hue_groups=*
 CORE_CONF_io_compression_codecs=org.apache.hadoop.io.compress.SnappyCodec
 
 HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check=false
+HDFS_CONF_fs_namenode_rpc___address=namenode:9000
 
 HBASE_CONF_hbase_rootdir=hdfs://namenode:9000/hbase
 HBASE_CONF_hbase_cluster_distributed=true
