Kerberos Kafka MySQL Elastic配置修改

--- a/template/cmservice/conf/cmservice.properties
+++ b/template/cmservice/conf/cmservice.properties
@@ -14,10 +14,15 @@ CMService.grafana.ssl.client.trust.keystore = <:install_root:>/certs/nginx/clien
 CMService.grafana.ssl.client.trust.keystore.password = <:ssl_password:>
 
 
-CMService.MysqlUrl = jdbc:mysql://<:nginx_ip:>:3308/<:cmdb_database:>?useUnicode=true&characterEncoding=utf8
+CMService.MysqlUrl = jdbc:mysql://<:nginx_ip:>:3308/<:cmdb_database:>?useUnicode=true&characterEncoding=utf8&useSSL=<:ssl_enable:>
 CMService.MysqlUsername = <:mysql_username:>
 CMService.MysqlPassword = <:mysql_password:>
 
+CMService.mysql.ssl.enabled = <:ssl_enable:>
+CMService.mysql.ssl.keyStore = <:install_root:>/certs/mysql/client.jks
+CMService.mysql.ssl.keyStorePassword = <:ssl_password:>
+CMService.mysql.ssl.trustStore = <:install_root:>/certs/mysql/truststore.jks
+CMService.mysql.ssl.trustStorePassword = <:ssl_password:>
 
 CMService.ssl.enabled = <:ssl_enable:>
 #1：单向认证，2：双向认证
