--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -5,6 +5,18 @@ Aggregator.1.1.nginx.metric = nginx.access
 # Whatever this pattern parses out will all be added as tags
 Aggregator.1.1.nginx.pattern = ^%{IP:ip} ([^\"]+)\"%{WORD} (?<uri>[^? \"]+)
 
+# SearchGuard SSL: 注意使用时相关密码是经过加密后的密码
+Elasticsearch.ssl.enabled = <:ssl_enable:>
+Elasticsearch.ssl.plugin.path.home = .
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.enabled = true
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_filepath = <:install_root:>/certs/elasticsearch/client.jks
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_filepath = <:install_root:>/certs/elasticsearch/server.jks
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_password = <:ssl_password:>
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_password = <:ssl_password:>
+Elasticsearch.ssl.plugin.searchguard.ssl.http.keystore_password = <:ssl_password:>
+Elasticsearch.ssl.plugin.searchguard.ssl.http.truststore_password = <:ssl_password:>
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.enforce_hostname_verification = false
+
 Elasticsearch.connect.cluster.name = cloudwiz
 Elasticsearch.connect.client.transport.ignore_cluster_name = true
 Elasticsearch.connect.client.transport.nodes_sampler_interval = 30s
@@ -70,13 +82,26 @@ Kafka.poll.timeoutMillis = 1000
 Kafka.topic.prefix = filebeat.
 Kafka.topic.refreshSeconds = 60
 
+Kafka.ssl.connection.enabled = <:ssl_enable:>
+Kafka.ssl.client.keystore = <:install_root:>/certs/kafka/client.jks
+Kafka.ssl.client.key.password = <:ssl_password:>
+Kafka.ssl.client.keystore.password = <:ssl_password:>
+Kafka.ssl.client.trust.keystore = <:install_root:>/certs/kafka/truststore.jks
+Kafka.ssl.client.trust.keystore.password = <:ssl_password:>
+
 LogProcessor.numIterationsBetweenBreak = 2048
 
 Opentsdb.max_no_tags = 8
 Opentsdb.proxy.metrics_server_url = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>/_tsdb
-Opentsdb.proxy.mysql_url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>
+Opentsdb.proxy.mysql_url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>?useUnicode=true&characterEncoding=utf8&useSSL=<:ssl_enable:>
 Opentsdb.proxy.mysql_username = <:mysql_username:>
 Opentsdb.proxy.mysql_password = <:mysql_password:>
+
+Opentsdb.proxy.mysql.ssl.enabled = <:ssl_enable:>
+Opentsdb.proxy.mysql.ssl.keyStore = <:install_root:>/certs/mysql/client.jks
+Opentsdb.proxy.mysql.ssl.keyStorePassword = <:ssl_password:>
+Opentsdb.proxy.mysql.ssl.trustStore = <:install_root:>/certs/mysql/truststore.jks
+Opentsdb.proxy.mysql.ssl.trustStorePassword = <:ssl_password:>
 
 Opentsdb.processor.enabled = true
 
