--- a/template/metric-proxy/config/application.yml
+++ b/template/metric-proxy/config/application.yml
@@ -11,7 +11,7 @@ spring:
   profiles:
     active: dev
   datasource:
-        url: jdbc:mysql://<:nginx_ip:>:3308/oneagent?useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://<:nginx_ip:>:3308/oneagent?useUnicode=true&characterEncoding=utf-8&useSSL=<:ssl_enable:>
         username: <:mysql_username:>
         password: ENC(<:mysql_password:>)
         initial-size: 10
@@ -65,10 +65,23 @@ kafka:
   pollMaxRecord: 500
   consumerNum: 2
   pollIntervalMs: 5000
+  ssl:
+    enabled: <:ssl_enable:>
+    keystore-location: <:install_root:>/certs/kafka/client.jks
+    key-password: ENC(<:ssl_password:>)
+    keystore-password: ENC(<:ssl_password:>)
+    truststore-location: <:install_root:>/certs/kafka/truststore.jks
+    truststore-password: ENC(<:ssl_password:>)
 
 
 mysql:
   grafana_name: <:grafana_database:>
+  ssl:
+    enabled: <:ssl_enable:>
+    keyStore: <:install_root:>/certs/mysql/client.jks
+    keyStorePassword: ENC(<:ssl_password:>)
+    trustStore: <:install_root:>/certs/mysql/truststore.jks
+    trustStorePassword: ENC(<:ssl_password:>)
 
 zuul:
   sensitiveHeaders: Authorization
