--- a/template/tools/certs/ssl/server.conf
+++ b/template/tools/certs/ssl/server.conf
@@ -12,8 +12,8 @@ commonName                      = cloudwiz.cn
 emailAddress                    = cwiz@cloudwiz.cn
 
 [v3_req]
-keyUsage = keyEncipherment, dataEncipherment
-extendedKeyUsage = serverAuth
+#keyUsage = keyEncipherment, dataEncipherment
+#extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 
 [alt_names]
