--- a/template/permission/config/application.yml
+++ b/template/permission/config/application.yml
@@ -6,7 +6,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=<:ssl_enable:>
     username: <:mysql_username:>
     password: <:mysql_password:>
     testWhileIdle: true
@@ -48,6 +48,14 @@ rest:
 mybatis:
   configuration:
     mapUnderscoreToCamelCase: true
+
+mysql:
+  ssl:
+    enabled: <:ssl_enable:>
+    keyStore: <:install_root:>/certs/mysql/client.jks
+    keyStorePassword: ENC(<:ssl_password:>)
+    trustStore: <:install_root:>/certs/mysql/truststore.jks
+    trustStorePassword: ENC(<:ssl_password:>)
 
 pagehelper:
   helperDialect: mysql
