更新log-analysis log-processor es ssl证书配置信息

--- a/template/log-analysis/config/log.analysis.properties
+++ b/template/log-analysis/config/log.analysis.properties
@@ -11,10 +11,10 @@ LogClustering.ElasticHost = <:nginx_ip:>
 LogClustering.ElasticPort = 9202
 
 LogClustering.elastic.ssl.client.enabled = false
-LogClustering.elastic.ssl.client.keystore = <:install_root:>/certs/nginx/client.jks
+LogClustering.elastic.ssl.client.keystore = <:install_root:>/certs/elasticsearch/client/sgadmin.jks
 LogClustering.elastic.ssl.client.key.password = <:ssl_password:>
 LogClustering.elastic.ssl.client.keystore.password = <:ssl_password:>
-LogClustering.elastic.ssl.client.trust.keystore = <:install_root:>/certs/nginx/clientTrust.jks
+LogClustering.elastic.ssl.client.trust.keystore = <:install_root:>/certs/elasticsearch/truststore.jks
 LogClustering.elastic.ssl.client.trust.keystore.password = <:ssl_password:>
 
 
