--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -5,12 +5,12 @@ Aggregator.1.1.nginx.metric = nginx.access
 # Whatever this pattern parses out will all be added as tags
 Aggregator.1.1.nginx.pattern = ^%{IP:ip} ([^\"]+)\"%{WORD} (?<uri>[^? \"]+)
 
-# SearchGuard SSL: 注意使用时相关密码是经过加密后的密码
+# SearchGuard SSL
 Elasticsearch.ssl.enabled = <:ssl_enable:>
 Elasticsearch.ssl.plugin.path.home = .
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.enabled = true
-Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_filepath = <:install_root:>/certs/elasticsearch/client.jks
-Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_filepath = <:install_root:>/certs/elasticsearch/server.jks
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_filepath = <:install_root:>/certs/elasticsearch/client/sgadmin.jks
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_filepath = <:install_root:>/certs/elasticsearch/truststore.jks
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_password = <:ssl_password:>
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_password = <:ssl_password:>
 Elasticsearch.ssl.plugin.searchguard.ssl.http.keystore_password = <:ssl_password:>
