--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -1,27 +1,34 @@
 [global]
-; All these directories MUST be absolute path;
-; REQUIRED:
+; 设置软件的安装目录
 install_root = "/opt/cwiz"
+; 设置数据目录
 data_root = "/opt/cwiz/data"
+; 设置日志目录
 log_root = "/opt/cwiz/logs"
+; 设置探针安装目录
 agent_root = "/opt"
 platform = RedHat
 
 ; Huawei:
-huawei_url = https//192.168.1.1
-huawei_ak = 123123123
-huawei_sk = 123123123
+; CloudOps URL
+huawei_url =
+; CloudOps AccessKey
+huawei_ak = 468f917903df145ee2e9
+; CloudOps SecretKey
+huawei_sk = 1297d4cbc503fbf25d36335b2e4e3993
 nginx_auth_request = "auth_request /auth-proxy;"
 
 ; OPTIONAL:
 host_ip = "nginx"
 nginx_port = 443
 nginx_protocol = https
-nginx_ext_ip = 192.168.1.144
+; EIP默认策略EIP 与本机ip 相同
+nginx_ext_ip =
 nginx_ext_port = 443
 nginx_ext_protocol = https
 nginx_prefix = IntelligentAnalysis
-docker_host_int_ip = 192.168.1.144
+; 本机IP
+docker_host_int_ip =
 
 ssl_password = Cwiz_123
 ssl_enable = true
