删掉所有docker 日志

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,7 +201,7 @@ services:
     depends_on:
     - mysql-server
     logging:
-      driver: local
+      driver: none
       options:
         max-size: 50m
 
@@ -345,7 +345,7 @@ services:
     depends_on:
     - mysql-server
     logging:
-      driver: local
+      driver: none
       options:
         max-size: 50m
 
