add krb5.conf when init

--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -1,9 +1,9 @@
 [global]
 ; All these directories MUST be absolute path;
 ; REQUIRED:
-install_root = "/opt/cwiz"
-data_root = "/opt/cwiz/data"
-log_root = "/opt/cwiz/logs"
+install_root = "/Users/mars/dev/work/YunXing/source/docker-cwiz/test"
+data_root = "/Users/mars/dev/work/YunXing/source/docker-cwiz/test/data"
+log_root = "/Users/mars/dev/work/YunXing/source/docker-cwiz/test/logs"
 agent_root = "/opt"
 platform = RedHat
 
