--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -9,7 +9,7 @@ Aggregator.1.1.nginx.pattern = ^%{IP:ip} ([^\"]+)\"%{WORD} (?<uri>[^? \"]+)
 Elasticsearch.ssl.enabled = <:ssl_enable:>
 Elasticsearch.ssl.plugin.path.home = .
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.enabled = true
-Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_filepath = <:install_root:>/certs/elasticsearch/client/sgadmin.jks
+Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_filepath = <:install_root:>/certs/elasticsearch/sgadmin.jks
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_filepath = <:install_root:>/certs/elasticsearch/truststore.jks
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.keystore_password = <:ssl_password:>
 Elasticsearch.ssl.plugin.searchguard.ssl.transport.truststore_password = <:ssl_password:>
@@ -22,6 +22,8 @@ Elasticsearch.connect.client.transport.ignore_cluster_name = true
 Elasticsearch.connect.client.transport.nodes_sampler_interval = 30s
 Elasticsearch.connect.client.transport.ping_timeout = 30s
 Elasticsearch.connect.client.transport.sniff = true
+Elasticsearch.transport.addresses = <:elasticsearch_hosts_unquoted:>
+Elasticsearch.transport.port = 9300
 
 Elasticsearch.failure.retries = 7
 Elasticsearch.timeout.seconds = 30
@@ -35,7 +37,7 @@ Elasticsearch.reconnect.pauseSeconds = 45
 Elasticsearch.failure.forgiveness = 0
 
 Elasticsearch.transport.address0 = <:nginx_ip:>
-Elasticsearch.transport.port = 9302
+# Elasticsearch.transport.port = 9302
 
 
 File.processor.filenamePrefix = /tmp/log-processor.
