--- a/template/webfront/conf/defaults.ini
+++ b/template/webfront/conf/defaults.ini
@@ -52,7 +52,7 @@ enable_gzip = false
 
 # https certs & key file
 cert_file = <:install_root:>/certs/webfront/server.crt
-cert_key = <:install_root:>/webfront/server.key
+cert_key = <:install_root:>/certs/webfront/server.key
 client_cert = <:install_root:>/certs/webfront/ca.crt
 
 # proxy https certs & keys & ca file
